# ParlayBuilder-FarosPicks

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
api/: main.py
ev_parlay/: builder.py  cli.py  config.py  ev_math.py  logging_utils.py  models.py  odds_api.py  parser.py  reporting.py  simulate.py  team_mapping.py
examples/: config.yaml  model.txt
tests/: test_basic.py  test_cli.py
web/: index.html
